src/test/ui/async-await/issue-64130-1-sync.stderr
error: future cannot be shared between threads safely
  --> $DIR/issue-64130-1-sync.rs:21:5
   |
LL | fn is_sync<T: Sync>(t: T) { }
   |               ---- required by this bound in `is_sync`
...
LL |     is_sync(bar());
   |     ^^^^^^^ future returned by `bar` is not `Sync`
   |
   = help: within `impl std::future::Future`, the trait `std::marker::Sync` is not implemented for `Foo`
note: future is not `Sync` as this value is used across an await
  --> $DIR/issue-64130-1-sync.rs:15:5
   |
LL |     let x = Foo;
   |         - has type `Foo`
LL |     baz().await;
   |     ^^^^^^^^^^^ await occurs here, with `x` maybe used later
LL | }
   | - `x` is later dropped here

error: aborting due to previous error

